make web-app docker only

--- a/web-app/Dockerfile
+++ b/web-app/Dockerfile
@@ -2,3 +2,5 @@ FROM pytorch/pytorch
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
+ENTRYPOINT [ "python3" ]
+CMD [ "main.py" ]
