--- a/.github/workflows/test-draft-version-document.yml
+++ b/.github/workflows/test-draft-version-document.yml
@@ -8,3 +8,12 @@ jobs:
         uses: actions/checkout@v2
       - name: Test draft version document
         run: make
+  tfjs:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Set up Git repository
+        uses: actions/checkout@v2
+      - name: Test tfjs
+        run: |
+          cd tfjs
+          make MODEL_NAME=lung-segmentation.Unet.mobilenet_v2.imagenet
