--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,4 +1,8 @@
-all: venv/bin/activate
+all: index.html
+	python3 -m http.server &
+	qutebrowser 0.0.0.0:8000 && fuser -k 8000/tcp
+
+index.html: venv/bin/activate
 	. venv/bin/activate && python3 -m pip install --upgrade pip wheel && python3 -m pip install -r requirements.txt && python3 main.py
 
 venv/bin/activate:
