--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,10 +2,10 @@ name: tests
 on:
   push:
     paths-ignore:
-      - 'docs/'
+      - 'docs/*'
   pull_request:
     paths-ignore:
-      - 'docs/'
+      - 'docs/*'
 
 jobs:
   make:
