--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,9 @@ coverage
 isort
 pipreqs
 python-minimizer
+pyupgrade
 
-# pythonfile requirements
+# main.py requirements
 gdown==4.4.0
 matplotlib==3.5.1
 nibabel==3.2.2
