--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Set up Git repository
         uses: actions/checkout@v2
       - name: Test
-        run: make
+        run: make artifacts/ms.pdf
