--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,10 @@ pyupgrade
 gdown==4.4.0
 matplotlib==3.5.1
 nibabel==3.2.2
-onnx-tf==1.9.0
+onnx-tf==1.10.0
 requests==2.27.1
 scikit-image==0.19.2
 segmentation-models-pytorch==0.2.1
 statsmodels==0.13.2
+tensorflow-probability==0.16.0
 tensorflowjs==3.15.0
