--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,18 +1,4 @@
-on:
-  push:
-    paths:
-      - '.github/workflows/tests.yml'
-      - 'Dockerfile'
-      - 'Makefile'
-      - 'main.py'
-      - 'requirements.txt'
-  pull_request:
-    paths:
-      - '.github/workflows/tests.yml'
-      - 'Dockerfile'
-      - 'Makefile'
-      - 'main.py'
-      - 'requirements.txt'
+on: [push, pull_request]
 
 jobs:
   make:
@@ -21,4 +7,6 @@ jobs:
       - name: Set up Git repository
         uses: actions/checkout@v3
       - name: Test
-        run: make artifacts/ms.pdf
+        run: |
+          make -C python/
+          make
