--- a/Makefile.server
+++ b/Makefile.server
@@ -3,13 +3,13 @@
 .PHONY: all
 
 container_engine=docker # For podman first execute `printf 'unqualified-search-registries=["docker.io"]\n' > /etc/containers/registries.conf.d/docker.conf`
-work_dir=/app
+work_dir=/work
 
 all:
 	$(container_engine) container run \
 		--detach-keys 'ctrl-^,ctrl-^' \
 		--publish 8000:8000 \
 		--rm \
-		--volume `pwd`:$(work_dir)/ \
+		--volume $$(pwd):$(work_dir)/ \
 		--workdir $(work_dir)/ \
 		python /bin/bash -c 'python3 -m http.server --directory .'
