--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,7 +6,11 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v3
-      - name: Test
+      - name: Check code
+        run: |
+          make -C python/ check
+          make check
+      - name: Test binary
         run: |
           make -C python/
           make
