--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,11 +6,11 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v3
-      - name: Check code
+      - name: Check code.
         run: |
           make -C python/ check
           make check
-      - name: Test binary
+      - name: Build binaries.
         run: |
           make -C python/
           make
