--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,10 +6,10 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v3
-      - name: Check code and build binaries for html.
+      - name: Check code and build binaries for browser.
         run: |
-          make -f Makefile.html check
-          make -f Makefile.html
+          make -f Makefile.browser check
+          make -f Makefile.browser
       - name: Check code and build binaries for python.
         run: |
           make -C python/ check
