--- a/Makefile.browser
+++ b/Makefile.browser
@@ -94,4 +94,4 @@ bin/eslintrc.js: bin
 	echo 'module.exports = { "env": { "browser": true, "es2021": true }, "extends": "eslint:recommended", "overrides": [ ], "parserOptions": { "ecmaVersion": "latest" }, "rules": { "indent": [ "error", "tab" ], "linebreak-style": [ "error", "unix" ], "quotes": [ "error", "single" ], "semi": [ "error", "always" ], "no-undef": 0 } }' > bin/eslintrc.js
 
 index.html:
-	printf '\n' > index.html
+	touch index.html
