--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,12 +8,14 @@ jobs:
         uses: actions/checkout@v3
       - name: Check code and build binaries for browser.
         run: |
-          make -C docs/ check
-          make -C docs/
+          cd docs/
+          make check
+          make
       - name: Check code and build binaries for python.
         run: |
-          make -C python/ check
-          make -C python/
+          cd python/
+          make check
+          make
       - name: Check code and build binaries for tex.
         run: |
           make check
