--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,17 +6,8 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v3
-      - name: Check code and build binaries for browser.
+      - name: Check code and build
         run: |
-          cd docs/
-          make check
-          make
-      - name: Check code and build binaries for python.
-        run: |
-          cd python/
-          make check
-          make
-      - name: Check code and build binaries for tex.
-        run: |
-          make check
-          make
+          cd docs/ && make check all && cd ..
+          cd python/ && make check all && cd ..
+          make check all
