--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,11 @@
 version: 2
 updates:
   - package-ecosystem: 'docker'
-    directory: '/python'
+    directory: '/docs/'
+    schedule:
+      interval: 'monthly'
+  - package-ecosystem: 'docker'
+    directory: '/python/'
     schedule:
       interval: 'monthly'
   - package-ecosystem: 'github-actions'
@@ -9,6 +13,6 @@ updates:
     schedule:
       interval: 'monthly'
   - package-ecosystem: 'pip'
-    directory: '/python'
+    directory: '/python/'
     schedule:
       interval: 'monthly'
