--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -10,15 +10,18 @@ dependencies = [
 	"onnx-tf==1.10.0",
 	"pandas==1.5.2",
 	"scikit-image==0.19.3",
-	"segmentation-models-pytorch==0.3.1",
+	"segmentation-models-pytorch==0.3.2",
 	"tensorflow-probability==0.19.0",
 	"tensorflowjs==4.1.0",
 ]
 
 [project.optional-dependencies]
-dev = ["ruff==0.0.205"]
+dev = ["ruff==0.0.220"]
 
 [tool.ruff]
-select = ["A", "C", "E", "ERA", "F", "I", "ICN", "N", "PD", "RET", "SIM", "T20", "TID", "UP", "W"]
-ignore = ["C901", "E501", "PD013"]
+select = ["A", "B", "BLE", "C", "C4", "E", "EM", "ERA", "F", "I", "ICN", "ISC", "N", "PD", "PGH", "PIE", "PLC", "PLE", "PLR", "PLW", "Q", "RET", "RUF", "S", "SIM", "T10", "T20", "TID", "UP", "W"]
+ignore = ["B905", "C901", "E501", "PD013", "S101"]
 fix = true
+
+[tool.ruff.flake8-quotes]
+inline-quotes = "single"
