--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,4 +1,5 @@
 FROM pytorch/pytorch:1.13.1-cuda11.6-cudnn8-runtime
-WORKDIR /usr/src/app
+ENV PIP_NO_CACHE_DIR=1
+WORKDIR /work
 COPY pyproject.toml .
 RUN python3 -m pip install --upgrade pip && python3 -m pip install .[dev]
