--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -22,7 +22,7 @@ dev = [
 ]
 
 [tool.mypy]
-cache_dir = "bin/check"
+cache_dir = "bin/check/mypy"
 ignore_missing_imports = true
 install_types = true
 non_interactive = true
