--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -8,6 +8,6 @@ jobs:
         uses: actions/checkout@v3
       - name: Check code and build
         run: |
-          cd docs/ && make mostlyclean clean check all && cd ..
-          cd latex/python/ && make mostlyclean clean check all && cd ../..
-          cd latex/ && make mostlyclean clean check all && cd ..
+          cd docs/ && make clean check all && cd ..
+          cd latex/python/ && make clean check all && cd ../..
+          cd latex/ && make clean check all && cd ..
