--- a/docs/Makefile
+++ b/docs/Makefile
@@ -24,7 +24,7 @@ Dockerfile:
 	printf 'FROM node\nWORKDIR /usr/src/app\nRUN apt-get update && apt-get install -y jq\nCOPY package.json /usr/src/\nRUN npm install --omit=dev --prefix /usr/src\nRUN npm install --global $$(jq --raw-output ".devDependencies | to_entries[] | \\"\(.key)@\(.value)\\"" /usr/src/package.json)\n' > $@
 
 index.js:
-	printf '"use strict";const fs = require("fs");const https = require("https");const serveHandler = require("serve-handler");const server = https.createServer({cert: fs.readFileSync("tmp/fullchain.pem"),key: fs.readFileSync("tmp/privkey.pem"),}, (request, response) => {return serveHandler(request, response)});if (process.env.DEBUG !== "1") {server.listen(8000, "172.17.0.2", () => {console.log("Running at https://172.17.0.2:8000");process.on("SIGINT", () => { process.exit(0); });});}' > $@
+	printf '"use strict"; const dns = require("dns"); const fs = require("fs"); const https = require("https"); const os = require("os"); const serveHandler = require("serve-handler"); const server = https.createServer({ cert: fs.readFileSync("tmp/fullchain.pem"), key: fs.readFileSync("tmp/privkey.pem"), }, (request, response) => { return serveHandler(request, response); }); if (process.env.DEBUG !== "1") { server.listen(443, "0.0.0.0", () => { dns.lookup(os.hostname(), (err, address) => { console.log(`Container IP address: https://$${address}`); }); process.on("SIGINT", () => { process.exit(0); }); }); }' > $@
 
 tmp:
 	mkdir $@
