--- a/latex/python/pyproject.toml
+++ b/latex/python/pyproject.toml
@@ -1,25 +1,25 @@
 [project]
+dependencies = [
+  "Jinja2==3.1.2",
+  "fvcore==0.1.5.post20221221",
+  "gdown==4.7.1",
+  "matplotlib==3.8.0",
+  "nibabel==5.1.0",
+  "onnx-tf==1.10.0",
+  "pandas==2.1.1",
+  "scikit-image==0.20.0",
+  "segmentation-models-pytorch==0.3.3",
+  "tensorflow-probability==0.19.0",
+  "tensorflowjs==4.4.0"
+]
 name = "UNKNOWN"
 version = "0.0.0"
-dependencies = [
-	"Jinja2==3.1.2",
-	"fvcore==0.1.5.post20221221",
-	"gdown==4.7.1",
-	"matplotlib==3.8.0",
-	"nibabel==5.1.0",
-	"onnx-tf==1.10.0",
-	"pandas==2.1.1",
-	"scikit-image==0.20.0",
-	"segmentation-models-pytorch==0.3.3",
-	"tensorflow-probability==0.19.0",
-	"tensorflowjs==4.4.0",
-]
 
 [project.optional-dependencies]
 dev = [
-	"black==22.12.0",
-	"djlint==1.34.0",
-	"mypy==1.5.1",
-	"ruff==0.0.291",
-	"ssort==0.11.6",
+  "djlint==1.34.0",
+  "mypy==1.5.1",
+  "ruff==0.1.2",
+  "ssort==0.11.6",
+  "toml-sort==0.23.1"
 ]
