--- a/docs/Makefile
+++ b/docs/Makefile
@@ -7,7 +7,7 @@ cmd = node index.js
 all: tmp/done
 
 check: .dockerignore .gitignore Dockerfile package.json tmp
-	$(MAKE) $$(test -s style.css && printf 'tmp/check-css-done') $$(test -s index.html && printf 'tmp/check-html-done') $$(test -s script.js && printf 'tmp/check-js-done') tmp/check-json-done
+	$(MAKE) $$(test -s style.css && printf 'tmp/check-css-done') $$(test -s index.html && printf 'tmp/check-html-done') tmp/check-js-done
 	if ls -a | grep -v -E -x '.|..|.dockerignore|.env|.gitignore|CNAME|Dockerfile|Makefile|docs|index.html|index.js|package.json|prm|python|script.js|style.css|tmp' | grep -q .; then false; fi
 	test $$(basename $$(pwd)) = "docs"
 
@@ -24,7 +24,7 @@ Dockerfile:
 	printf 'FROM node\nWORKDIR /usr/src/app\nRUN apt-get update && apt-get install -y jq\nCOPY package.json /usr/src/\nRUN npm install --omit=dev --prefix /usr/src\nRUN npm install --global $$(jq --raw-output ".devDependencies | to_entries[] | \\"\(.key)@\(.value)\\"" /usr/src/package.json)\n' > $@
 
 index.js:
-	printf '"use strict"; const dns = require("dns"); const fs = require("fs"); const https = require("https"); const os = require("os"); const serveHandler = require("serve-handler"); const server = https.createServer({ cert: fs.readFileSync("tmp/fullchain.pem"), key: fs.readFileSync("tmp/privkey.pem"), }, (request, response) => { return serveHandler(request, response); }); if (process.env.DEBUG !== "1") { server.listen(443, "0.0.0.0", () => { dns.lookup(os.hostname(), (err, address) => { console.log(`Container IP address: https://$${address}`); }); process.on("SIGINT", () => { process.exit(0); }); }); }' > $@
+	printf 'const dns = require("dns"); const fs = require("fs"); const https = require("https"); const os = require("os"); const serveHandler = require("serve-handler"); const server = https.createServer({ cert: fs.readFileSync("tmp/fullchain.pem"), key: fs.readFileSync("tmp/privkey.pem"), }, (request, response) => { return serveHandler(request, response); }); if (process.env.DEBUG !== "1") { server.listen(443, "0.0.0.0", () => { dns.lookup(os.hostname(), (err, address) => { console.log(`Container IP address: https://$${address}`); }); process.on("SIGINT", () => { process.exit(0); }); }); }' > $@
 
 tmp:
 	mkdir $@
@@ -49,24 +49,17 @@ tmp/check-html-done: index.html
 		html-validate index.html'
 	touch $@
 
-tmp/check-js-done: index.js script.js
+tmp/check-js-done: index.js
 	docker container run \
 		--rm \
 		--volume $$(pwd):/usr/src/app/ \
 		--workdir /usr/src/app \
-		$$(docker image build --quiet .) /bin/sh -c '\
-		rome check --apply-unsafe *.js && \
-		rome format --write *.js'
-	touch $@
-
-tmp/check-json-done: package.json
-	docker container run \
-		--rm \
-		--volume $$(pwd):/usr/src/app/ \
-		--workdir /usr/src/app \
-		$$(docker image build --quiet .) /bin/sh -c '\
-		rome check --apply-unsafe package.json && \
-		rome format --write package.json'
+		$$(docker image build --quiet .) /bin/sh -c "\
+		script_js=$$([ -e script.js ] && echo script.js) && \
+		style_css=$$([ -e style.css ] && echo style.css) && \
+		biome check --apply package.json && \
+		sort-package-json package.json && \
+		biome check --apply-unsafe index.js package.json \$$script_js \$$style_css"
 	touch $@
 
 tmp/done: index.js tmp tmp/fullchain.pem
@@ -90,4 +83,4 @@ tmp/fullchain.pem: .dockerignore .gitignore Dockerfile package.json
 		$$(docker image build --quiet .) openssl req -subj "/C=.." -nodes -x509 -keyout tmp/privkey.pem -out $@
 
 package.json:
-	printf '{\n\t"dependencies": {\n\t\t"serve": "latest"\n\t},\n\t"devDependencies": {\n\t\t"css-validator": "latest",\n\t\t"html-validate": "latest",\n\t\t"js-beautify": "latest",\n\t\t"rome": "latest",\n\t\t"stylelint": "latest",\n\t\t"stylelint-config-standard": "latest",\n\t\t"stylelint-order": "latest"\n\t},\n\t"stylelint": {\n\t\t"extends": "stylelint-config-standard",\n\t\t"plugins": ["stylelint-order"],\n\t\t"rules": {\n\t\t\t"order/properties-alphabetical-order": true\n\t\t}\n\t}\n}\n' > $@
+	printf '{"stylelint":{"extends":"stylelint-config-standard","plugins":["stylelint-order"],"rules":{"order/properties-alphabetical-order":true}},"dependencies":{"serve":"latest"},"devDependencies":{"@biomejs/biome":"latest","css-validator":"latest","html-validate":"latest","js-beautify":"latest","sort-package-json":"latest","stylelint":"latest","stylelint-config-standard":"latest","stylelint-order":"latest"}}' > $@
