--- a/docs/package.json
+++ b/docs/package.json
@@ -1,21 +1,23 @@
 {
-	"dependencies": {
-		"serve": "14.2.1"
-	},
-	"devDependencies": {
-		"css-validator": "0.11.0",
-		"html-validate": "8.3.0",
-		"js-beautify": "1.14.9",
-		"rome": "12.1.3",
-		"stylelint": "15.10.3",
-		"stylelint-config-standard": "34.0.0",
-		"stylelint-order": "6.0.3"
-	},
 	"stylelint": {
 		"extends": "stylelint-config-standard",
 		"plugins": ["stylelint-order"],
 		"rules": {
 			"order/properties-alphabetical-order": true
 		}
+	},
+	"dependencies": {
+		"serve": "14.2.1"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.3.1",
+		"css-validator": "0.11.0",
+		"html-validate": "8.3.0",
+		"js-beautify": "1.14.9",
+		"rome": "12.1.3",
+		"sort-package-json": "2.6.0",
+		"stylelint": "15.10.3",
+		"stylelint-config-standard": "34.0.0",
+		"stylelint-order": "6.0.3"
 	}
 }
