--- a/latex/python/pyproject.toml
+++ b/latex/python/pyproject.toml
@@ -1,16 +1,14 @@
 [project]
 dependencies = [
-  "Jinja2==3.1.2",
   "fvcore==0.1.5.post20221221",
   "gdown==4.7.1",
   "matplotlib==3.8.0",
   "nibabel==5.1.0",
-  "onnx-tf==1.10.0",
+  "nobuco==0.8.7",
   "pandas==2.1.1",
   "scikit-image==0.20.0",
   "segmentation-models-pytorch==0.3.3",
-  "tensorflow-probability==0.19.0",
-  "tensorflowjs==4.4.0"
+  "tensorflowjs==4.12.0"
 ]
 name = "UNKNOWN"
 version = "0.0.0"
