--- a/latex/python/pyproject.toml
+++ b/latex/python/pyproject.toml
@@ -4,12 +4,11 @@ dependencies = [
   "gdown==5.1.0",
   "matplotlib==3.8.3",
   "nibabel==5.2.1",
-  "onnx-tf==1.10.0",
+  "onnx==1.16.0",
+  "onnxscript==0.1.0.dev20240402",
   "pandas==2.2.1",
-  "scikit-image==0.20.0",
-  "segmentation-models-pytorch==0.3.3",
-  "tensorflow-probability==0.19.0",
-  "tensorflowjs==4.4.0"
+  "scikit-image==0.22.0",
+  "segmentation-models-pytorch==0.3.3"
 ]
 name = "UNKNOWN"
 version = "0.0.0"
