--- a/docs/package.json
+++ b/docs/package.json
@@ -14,6 +14,7 @@
 		"css-validator": "0.11.0",
 		"html-validate": "8.19.1",
 		"js-beautify": "1.15.1",
+		"linkinator": "6.0.5",
 		"sort-package-json": "2.10.0",
 		"stylelint": "16.6.1",
 		"stylelint-config-standard": "36.0.0",
